crates/toml_edit/tests/snapshots/invalid/datetime/second-over.stderr
TOML parse error at line 3, column 5
  |
3 | d = 2006-01-01T00:00:61-00:00
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
invalid time, expected second between 00 and 60
